--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.11",
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^5.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.298.0",
-    "next": "14.0.4",
+    "next": "^14.2.23",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
